[tool.poetry]
name = "backend"
version = "0.1.0"
description = "fastapi backend for trading app"
authors = ["Quentin <qmaccba@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ib-insync = "^0.9.86"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
pandas = "^2.1.3"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
